[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ANGELINE WANG <02ANGELINEWANG@GMAIL.COM>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
mypy = "^0.990"
autopep8 = "^2.0.0"
pillow = "^9.3.0"
psycopg2 = "^2.9.5"
djangorestframework = "^3.14.0"
jwt = "^1.3.1"
pyjwt = "^2.6.0"
cors = "^1.0.1"
django-cors-headers = "^3.13.0"
pytz = "^2022.6"
types-pytz = "^2022.6.0.1"
django-storages = {extras = ["google"], version = "^1.13.1"}
django-environ = "^0.9.0"
docker = "^6.0.1"
flask = "^2.2.2"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"
jsonify = "^0.5"
psycopg2-binary = "^2.9.5"
google = "^3.0.0"
google-cloud-storage = "^2.7.0"
cloud-sql-python-connector = {extras = ["pg8000"], version = "^1.0.0"}
sqlalchemy = "^1.4.45"
flask-sqlalchemy = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
